<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorCoolMint">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorLightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/settings_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/homeAsUpIndicator"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428">

        <TextView
            android:id="@+id/settings_text_night"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/settings_dark_mode"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/settings_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/settings_toggle_button_off"
            android:textOn="@string/settings_toggle_button_on" />

    </LinearLayout>

    <Button
        android:id="@+id/settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/settings_save"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="49dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">

        <TextView
            android:id="@+id/settings_chg_email"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="200dp"
            android:text="@string/settings_change_email"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settings_chg_email_text"
            android:layout_marginEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:hint="write new email"
            android:textSize="20dp"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"/>
    </LinearLayout>

    <Button
        android:id="@+id/settings_chg_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:text="@string/settings_change_pwd"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_chg_pi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="105dp"
        android:text="@string/settings_change_pfImage"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>